- Updated to Gradle 6 - Removed OSGI - Builds with Java 11 but outputs Java 8 byte code